--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -297,11 +297,67 @@ services:
         find /tmp -iname "*.tgz" -exec tar -C /home/apps -xzf "{}" ";"
         until test -e /home/deployment-apps; do sleep 1; done
         find /tmp -iname "*.tgz" -exec tar -C /home/deployment-apps -xzf "{}" ";"
+        mkdir -p "/home/deployment-apps/TA-kafka-streaming-platform/local"
         sed 's:^disabled = true$$:disabled = false:g' \
-          /home/deployment-apps/TA-kafka-streaming-platform/default/inputs.conf.sample \
-          | tee /home/deployment-apps/TA-kafka-streaming-platform/local/inputs.conf
-        chown --reference=/home -vR /home
-        chgrp --reference=/home -vR /home
+          "/home/deployment-apps/TA-kafka-streaming-platform/default/inputs.conf.sample" \
+          | tee "/home/deployment-apps/TA-kafka-streaming-platform/local/inputs.conf"
+        tee "/home/system/local/serverclass.conf" <<-EOF
+          [serverClass:kafkaclass:app:TA-kafka-streaming-platform]
+          restartSplunkWeb = 1
+          restartSplunkd = 1
+          stateOnClient = enabled
+
+          [serverClass:kafkaclass:app:telegraf-os]
+          restartSplunkWeb = 1
+          restartSplunkd = 1
+          stateOnClient = enabled
+
+          [serverClass:kafkaclass:app:TA-influxdata-telegraf]
+          restartSplunkWeb = 1
+          restartSplunkd = 1
+          stateOnClient = enabled
+
+          [serverClass:kafkaclass:app:telegraf-kafka]
+          restartSplunkWeb = 1
+          restartSplunkd = 1
+          stateOnClient = enabled
+
+          [serverClass:kafkaclass]
+          whitelist.0 = *.kafka
+          whitelist.1 = *.kafka_default
+        EOF
+
+        mkdir -p "/home/etc/system/local"
+        tee -a "/home/etc/system/local/indexes.conf" <<-EOF
+
+          [kafka]
+          datatype = event
+          homePath = $$SPLUNK_DB/kafka/db
+          thawedPath = $$SPLUNK_DB/kafka/thaweddb
+          coldPath = $$SPLUNK_DB/kafka/colddb
+          #coldToFrozenDir = /app/archive/kafka
+          maxDataSize = auto
+          maxHotBuckets =
+          maxWarmDBCount =
+          maxTotalDataSizeMB =
+          frozenTimePeriodInSecs =
+
+          [telegraf_kafka]
+          datatype = metric
+          homePath = $$SPLUNK_DB/telegraf_kafka/db
+          thawedPath = $$SPLUNK_DB/telegraf_kafka/thaweddb
+          coldPath = $$SPLUNK_DB/telegraf_kafka/colddb
+          #coldToFrozenDir = /app/archive/telegraf_kafka
+          maxDataSize = auto
+          maxHotBuckets =
+          maxWarmDBCount =
+          maxTotalDataSizeMB =
+          frozenTimePeriodInSecs =
+
+        EOF
+
+        chown --reference=/home -R /home
+        chgrp --reference=/home -R /home
         exit
     volumes:
       - ./plugins:/tmp:ro
