--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -322,37 +322,64 @@ services:
           restartSplunkd = 1
           stateOnClient = enabled
 
+          [serverClass:kafkaclass:app:TA-telegraf-amd64]
+          restartSplunkWeb = 1
+          restartSplunkd = 1
+          stateOnClient = enabled
+
           [serverClass:kafkaclass]
           whitelist.0 = *.kafka
           whitelist.1 = *.kafka_default
         EOF
 
-        mkdir -p "/home/etc/system/local"
-        tee -a "/home/etc/system/local/indexes.conf" <<-EOF
+        mkdir -p "/home/deployment-apps/TA-telegraf-amd64/local"
+        tee -a "/home/deployment-apps/TA-telegraf-amd64/local/inputs.conf" <<-EOF
+          [http://Telegraf]
+          disabled = 0
+          index = telegraf
+          indexes = telegraf
+          token = 8715c2d1-94af-4927-908a-23408c374328
+        EOF
+
+        mkdir -p "/home/system/local"
+        cp "/home/system/default/indexes.conf" "/home/system/local/indexes.conf"
+        tee -a "/home/system/local/indexes.conf" <<-EOF
+
+          [telegraf]
+          datatype = event
+          homePath = \$$SPLUNK_DB/telegraf/db
+          thawedPath = \$$SPLUNK_DB/telegraf/thaweddb
+          coldPath = \$$SPLUNK_DB/telegraf/colddb
+          #coldToFrozenDir = /app/archive/telegraf
+          maxDataSize = auto
+          maxHotBuckets = auto
+          maxWarmDBCount = auto
+          maxTotalDataSizeMB = auto
+          frozenTimePeriodInSecs = auto
 
           [kafka]
           datatype = event
-          homePath = $$SPLUNK_DB/kafka/db
-          thawedPath = $$SPLUNK_DB/kafka/thaweddb
-          coldPath = $$SPLUNK_DB/kafka/colddb
+          homePath = \$$SPLUNK_DB/kafka/db
+          thawedPath = \$$SPLUNK_DB/kafka/thaweddb
+          coldPath = \$$SPLUNK_DB/kafka/colddb
           #coldToFrozenDir = /app/archive/kafka
           maxDataSize = auto
-          maxHotBuckets =
-          maxWarmDBCount =
-          maxTotalDataSizeMB =
-          frozenTimePeriodInSecs =
+          maxHotBuckets = auto
+          maxWarmDBCount = auto
+          maxTotalDataSizeMB = auto
+          frozenTimePeriodInSecs = auto
 
           [telegraf_kafka]
           datatype = metric
-          homePath = $$SPLUNK_DB/telegraf_kafka/db
-          thawedPath = $$SPLUNK_DB/telegraf_kafka/thaweddb
-          coldPath = $$SPLUNK_DB/telegraf_kafka/colddb
+          homePath = \$$SPLUNK_DB/telegraf_kafka/db
+          thawedPath = \$$SPLUNK_DB/telegraf_kafka/thaweddb
+          coldPath = \$$SPLUNK_DB/telegraf_kafka/colddb
           #coldToFrozenDir = /app/archive/telegraf_kafka
           maxDataSize = auto
-          maxHotBuckets =
-          maxWarmDBCount =
-          maxTotalDataSizeMB =
-          frozenTimePeriodInSecs =
+          maxHotBuckets = auto
+          maxWarmDBCount = auto
+          maxTotalDataSizeMB = auto
+          frozenTimePeriodInSecs = auto
 
         EOF
 
